--- a/tests/sample_tasks1/sample-config.yaml
+++ b/tests/sample_tasks1/sample-config.yaml
@@ -29,5 +29,8 @@ cat:
   threads: 4  # Each worker needs at least 4 threads to complete this step
   memory: 40G
   time: "4:00:00"
+  dependencies:
+    sed:
+      program: sed
 
 ...  # document end
