--- a/tests/sample_tasks1/sample-config.yaml
+++ b/tests/sample_tasks1/sample-config.yaml
@@ -18,13 +18,13 @@ SLURM:
   --job-name: EukMS
   user-id: uid
 
-echo:
+write:
   workers: 20
   threads: 4  # Each worker needs at least 4 threads to complete this step
   memory: 40G
   time: "4:00:00"
 
-cat:
+update:
   workers: 20
   threads: 4  # Each worker needs at least 4 threads to complete this step
   memory: 40G
