Refactor - Aggregate task work with complete raw input into pipeline, updates in run() method to only use what is passed from aggregate; Aggregate tasks accept and use Dependencies, but no field adjustment is done

--- a/tests/executor/nested/nested-config.yaml
+++ b/tests/executor/nested/nested-config.yaml
@@ -18,11 +18,18 @@ SLURM:
   --job-name: EukMS
   user-id: uid
 
-MMSeqsCreateDB:
+MMSeqsConcatDB:
   workers: 10
   threads: 16
   memory: 40G
   time: "4:00:00"
   program: /home/user/miniconda3/envs/EukMS_run/bin/mmseqs
+  dependencies:
+    MMSeqsCreateDB:
+      workers: 10
+      threads: 16
+      memory: 40G
+      time: "4:00:00"
+      program: /home/user/miniconda3/envs/EukMS_run/bin/mmseqs
 
 ...  # document end
