Load input data from existing pipelines

--- a/tests/executor/simple/sample-config.yaml
+++ b/tests/executor/simple/sample-config.yaml
@@ -3,8 +3,9 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  base:  # List pipelines containing input data
-    root
+  root: all
+  run:
+    from: to
 
 ###########################################
 
