--- a/tests/config_manager/config_files/bad_data-config.yaml
+++ b/tests/config_manager/config_files/bad_data-config.yaml
@@ -3,8 +3,14 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  base:  # List pipelines containing input data
-    root
+  root: all
+
+## Global settings
+GLOBAL:
+  # Maximum threads/cpus to use in analysis
+  MaxThreads: 10
+  # Maximum memory to use (in GB)
+  MaxMemory: 100
 
 ###########################################
 
@@ -19,7 +25,6 @@ SLURM:
   user-id: uid
 
 Sample:
-  workers: 10
   threads: 1
   memory: 40G
   time: "4:00:00"
