--- a/tests/config_manager/original-config.yaml
+++ b/tests/config_manager/original-config.yaml
@@ -5,6 +5,13 @@
 INPUT:
   root: all
 
+## Global settings
+GLOBAL:
+  # Maximum threads/cpus to use in analysis
+  MaxThreads: 10
+  # Maximum memory to use (in GB)
+  MaxMemory: 100
+
 ###########################################
 
 SLURM:
@@ -18,24 +25,27 @@ SLURM:
   user-id: uid
 
 Write:
-  workers: 1
+  # Number of threads task will use
   threads: 1
-  memory: 16G
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
 
 Update:
-  workers: 1
+  # Number of threads task will use
   threads: 1
-  memory: 16G
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
   dependencies:
     Sed:
       program:
 
 Merge:
-  workers: 1
+  # Number of threads task will use
   threads: 1
-  memory: 16G
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
 
 ...  # document end
