--- a/tests/dependency_graph/dep-graph-config.yaml
+++ b/tests/dependency_graph/dep-graph-config.yaml
@@ -3,8 +3,14 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  base:  # List pipelines containing input data
-    root
+  root: all
+
+## Global settings
+GLOBAL:
+  # Maximum threads/cpus to use in analysis
+  MaxThreads: 10
+  # Maximum memory to use (in GB)
+  MaxMemory: 100
 
 ###########################################
 
