--- a/tests/executor/no_output/no_output-config.yaml
+++ b/tests/executor/no_output/no_output-config.yaml
@@ -5,6 +5,13 @@
 INPUT:
   root: all
 
+## Global settings
+GLOBAL:
+  # Maximum threads/cpus to use in analysis
+  MaxThreads: 10
+  # Maximum memory to use (in GB)
+  MaxMemory: 100
+
 ###########################################
 
 SLURM:
@@ -18,9 +25,8 @@ SLURM:
   user-id: uid
 
 NoOutput:
-  workers: 10
-  threads: 16
-  memory: 40G
+  threads: 1
+  memory: 40
   time: "4:00:00"
 
 ...  # document end
