--- a/tests/executor/simple/sample-config.yaml
+++ b/tests/executor/simple/sample-config.yaml
@@ -48,4 +48,11 @@ Merge:
   memory: 8
   time: "4:00:00"
 
+UnMerge:
+  # Number of threads task will use
+  threads: 1
+  # Amount of memory task will use (in GB)
+  memory: 8
+  time: "4:00:00"
+
 ...  # document end
