--- a/tests/eukmetasanity/run-config.yaml
+++ b/tests/eukmetasanity/run-config.yaml
@@ -29,7 +29,7 @@ Evidence:
   threads: 16
   # Amount of memory task will use (in GB)
   memory: 90
-  time: "4:00:00"
+  time: "12:00:00"
   dependencies:
     MetaEuk:
       program: metaeuk
@@ -39,7 +39,7 @@ Taxonomy:
   threads: 16
   # Amount of memory task will use (in GB)
   memory: 90
-  time: "4:00:00"
+  time: "8:00:00"
   cutoff: 8.0  # Minimum % of mapped reads to tax level
   dependencies:
     MMSeqsCreateDB:
@@ -63,7 +63,7 @@ Repeats:
   threads: 16
   # Amount of memory task will use (in GB)
   memory: 16
-  time: "4:00:00"
+  time: "24:00:00"
   dependencies:
     RModBuildDatabase:
       program: BuildDatabase
@@ -93,41 +93,71 @@ AbinitioGeneMark:
   threads: 16
   # Amount of memory task will use (in GB)
   memory: 16
-  time: "4:00:00"
+  time: "16:00:00"
+  skip: false
   dependencies:
     MMSeqsFilterTaxSeqDB:
-      program:
+      program: mmseqs
+      level: order
+      data:
+        /path/to/data/odb-mmetsp_db
 
     GeneMarkProtHint:
-      program:
+      program: prothint.py
 
     GeneMarkPETAP:
-      program:
+      program: gmes_petap.pl
+      FLAGS:
+        --min_contig 100
+        --max_contig 100000000
+        --max_gap 5000
+        --max_mask 5000
+        --min_contig_in_predict 100
+        --min_gene_in_predict 10
+        --gc_donor 0.001
+        --max_intron 10000
+        --max_intergenic 50000
+        --soft_mask auto
 
 AbinitioAugustus:
   # Number of threads task will use
   threads: 1
   # Amount of memory task will use (in GB)
   memory: 8
-  time: "4:00:00"
+  time: "24:00:00"
   dependencies:
     MMSeqsCreateDB:
-      program:
+      program: mmseqs
 
     MMSeqsSearch:
-      program:
+      data:
+        /path/to/data/odb-mmetsp_db
+      program: mmseqs
+      subname: linsearch  # Can use `search` if linear index is not present for database
+      FLAGS:
+        --split-memory-limit 16G
+        --cov-mode 0
+        -c 0.6
+        -e 0.01
+        --remove-tmp-files
 
     MMSeqsConvertAlis:
-      program:
+      data:
+        /path/to/data/odb-mmetsp_db
+      program: mmseqs
+      FLAGS:
+        --format-output query,target,pident,taxid,taxname,taxlineage
 
     Augustus:
-      program:
+      program: augustus
+      cutoff: 25.0
+      rounds: 3
 
 Merge:
   # Number of threads task will use
   threads: 1
   # Amount of memory task will use (in GB)
   memory: 8
-  time: "4:00:00"
+  time: "1:00:00"
 
 ...  # document end
