--- a/tests/eukmetasanity/run-config.yaml
+++ b/tests/eukmetasanity/run-config.yaml
@@ -33,6 +33,18 @@ Evidence:
   dependencies:
     MetaEuk:
       program: metaeuk
+      data:
+        /path/to/data/odb-mmetsp_db
+      # Pass any flags to metaeuk required
+      FLAGS:
+        --min-length 30
+        --metaeuk-eval 0.0001
+        --split-memory-limit 75G
+        -s 7
+        --cov-mode 0
+        -c 0.3
+        -e 100
+        --max-overlap 0
 
 Taxonomy:
   # Number of threads task will use
@@ -56,7 +68,7 @@ Taxonomy:
           --min-seq-id 0.40
           -c 0.3
           --cov-mode 0
-          --split-memory-limit 16G
+          --split-memory-limit 75G
 
 Repeats:
   # Number of threads task will use
@@ -109,7 +121,7 @@ AbinitioGeneMark:
       program: gmes_petap.pl
       FLAGS:
         --min_contig 100
-        --max_contig 100000000
+        --max_contig 1000000000
         --max_gap 5000
         --max_mask 5000
         --min_contig_in_predict 100
@@ -130,6 +142,7 @@ AbinitioAugustus:
       program: mmseqs
 
     MMSeqsSearch:
+      memory: 20
       data:
         /path/to/data/odb-mmetsp_db
       program: mmseqs
