Edit .yaml EukMS run files for testing

--- a/tests/eukmetasanity/environment.yml
+++ b/tests/eukmetasanity/environment.yml
@@ -1,9 +1,9 @@
-name: EukMS_run
+name: EukMS_runtest
 channels:
   - bioconda
   - conda-forge
 dependencies:
-  - python=3.6.9
+  - python=3.8.6
   - augustus=3.4.0
   - gffread=0.12.1
   - mmseqs2=12.113e3
