Added more tests for accidental mixing of pipelines

--- a/tests/executor/bad_mixing/bad_mixing-config.yaml
+++ b/tests/executor/bad_mixing/bad_mixing-config.yaml
@@ -24,10 +24,24 @@ SLURM:
   --job-name: EukMS
   user-id: uid
 
-BadAggregate:
-  workers: 10
+SingleTask:
+  # Number of threads task will use
   threads: 1
-  memory: 40
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
+  dependencies:
+    AggregateProgram:
+      program: cat
+
+AggTask:
+  # Number of threads task will use
+  threads: 1
+  # Amount of memory task will use (in GB)
+  memory: 8
+  time: "4:00:00"
+  dependencies:
+    Program:
+      program: cat
 
 ...  # document end
