--- a/tests/eukmetasanity/report/report-config.yaml
+++ b/tests/eukmetasanity/report/report-config.yaml
@@ -56,11 +56,9 @@ MMSeqs:
       data:
         /media/user/2TB/Data/EukMetaSanity/data/odb-mmetsp_db
       program: mmseqs
-      subname: search
+      subname: linsearch
       FLAGS:
         --split-memory-limit 75G
-        -s 7
-        -k 7
         -c 0.3
         --cov-mode 1
         --remove-tmp-files
