Add check to make sure downstream input dicts are not overwritten at task levels; Small bug checks and fixes, ensure to parse all task list even if sections omitted in upstream tasks (will still fail if an invalid dependency DAG is generated

--- a/tests/executor/confirm_not_overwritten/confirm_not_overwritten-config.yaml
+++ b/tests/executor/confirm_not_overwritten/confirm_not_overwritten-config.yaml
@@ -4,8 +4,6 @@
 ## Pipeline input section
 INPUT:
   root: all
-  first_pipeline:
-    input: update-result
 
 ## Global settings
 GLOBAL:
@@ -26,9 +24,28 @@ SLURM:
   --job-name: EukMS
   user-id: uid
 
-Print:
+First:
+  # Number of threads task will use
   threads: 1
-  memory: 40
+  # Amount of memory task will use (in GB)
+  memory: 8
+  time: "4:00:00"
+
+Second:
+  # Number of threads task will use
+  threads: 1
+  # Amount of memory task will use (in GB)
+  memory: 8
+  time: "4:00:00"
+  dependencies:
+    Dependency:
+      program: cat
+
+Third:
+  # Number of threads task will use
+  threads: 1
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
 
 ...  # document end
