--- a/tests/executor/added_imports/added_imports-config.yaml
+++ b/tests/executor/added_imports/added_imports-config.yaml
@@ -4,8 +4,6 @@
 ## Pipeline input section
 INPUT:
   root: all
-  first_pipeline:
-    input: update-result
 
 ## Global settings
 GLOBAL:
@@ -26,9 +24,11 @@ SLURM:
   --job-name: EukMS
   user-id: uid
 
-Print:
+ComplexTask:
+  # Number of threads task will use
   threads: 1
-  memory: 40
+  # Amount of memory task will use (in GB)
+  memory: 8
   time: "4:00:00"
 
 ...  # document end
