--- a/tests/eukmetasanity/refine/refine-config.yaml
+++ b/tests/eukmetasanity/refine/refine-config.yaml
@@ -30,12 +30,21 @@ Transcriptomes:
   # Amount of memory task will use (in GB)
   memory: 8
   time: "4:00:00"
+  skip: false
   dependencies:
     GMAPBuild:
-      program:
+      program: gmapindex
 
     GMAP:
-      program:
+      program: gmap
+      # Should be in format (excluding spaces around tab):
+      # file-basename \t /path/to/tr1.fna[,/path/to/tr2.fna]
+      transcriptome: /path/to/transcriptome-mapping-file
+      FLAGS:
+        -B 5
+        --input-buffer-size 1000000
+        --output-buffer-size 1000000
+        -f samse
 
 RNASeq:
   # Number of threads task will use
@@ -43,12 +52,18 @@ RNASeq:
   # Amount of memory task will use (in GB)
   memory: 8
   time: "4:00:00"
+  skip: false
   dependencies:
     Hisat2Build:
-      program:
+      program: hisat2-build
 
     Hisat2:
-      program:
+      program: hisat2
+      # Should be in format (excluding spaces around tab):
+      # file-basename \t /path/to/r1.fq[,/path/to/r2.fq][;/path/to/r3.fq[,/path/to/r4.fq]]
+      rnaseq: /path/to/rnaseq-mapping-file
+      FLAGS:
+        ""
 
 MergeBams:
   # Number of threads task will use
@@ -58,10 +73,14 @@ MergeBams:
   time: "4:00:00"
   dependencies:
     SambambaView:
-      program:
+      program: sambamba
+      FLAGS:
+        -f bam
 
     SambambaSort:
-      program:
+      program: sambamba
+      FLAGS:
+        -m 10G
 
 GatherProteins:
   # Number of threads task will use
@@ -71,7 +90,10 @@ GatherProteins:
   time: "4:00:00"
   dependencies:
     MMSeqsFilterTaxSeqDB:
-      program:
+      program: mmseqs
+      level: order
+      data:
+        /path/to/data/odb-mmetsp_db
 
 RunBraker:
   # Number of threads task will use
@@ -81,6 +103,8 @@ RunBraker:
   time: "4:00:00"
   dependencies:
     Braker:
-      program:
+      program: braker.pl
+      FLAGS:
+      # Provide flags as desired
 
 ...  # document end
