--- a/tests/eukmetasanity/refine/refine-config.yaml
+++ b/tests/eukmetasanity/refine/refine-config.yaml
@@ -3,7 +3,7 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  root: all
+  run: all
 
 ## Global settings
 GLOBAL:
