--- a/tests/demo/environment.yml
+++ b/tests/demo/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - prodigal=2.6.3
   - minimap=2.20
   - spades=3.15.2
+  - mmseqs2=13.45111
   - pip
   - pip:
     - git+https://github.com/cjneely10/YAPIM.git
