Finalize first part of demo; Make input parser iterator to prevent needless loading to memory

--- a/tests/demo/environment.yml
+++ b/tests/demo/environment.yml
@@ -1,14 +1,63 @@
 name: yapim-demo
 channels:
   - bioconda
-  - conda-forge
+  - defaults
 dependencies:
-  - trimmomatic=0.39
-  - prodigal=2.6.3
-  - minimap=2.20
-  - spades=3.15.2
-  - mmseqs2=13.45111
-  - pip
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=4.5=1_gnu
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2021.5.25=h06a4308_1
+  - certifi=2021.5.30=py38h06a4308_0
+  - gawk=5.1.0=h7b6447c_0
+  - k8=0.2.5=h9a82719_1
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgomp=9.3.0=h5101ec6_17
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - minimap2=2.20=h5bf99c6_0
+  - mmseqs2=13.45111=h95f258a_1
+  - ncurses=6.2=he6710b0_1
+  - openjdk=8.0.152=h7b6447c_3
+  - openssl=1.1.1k=h27cfd23_0
+  - pip=21.1.2=py38h06a4308_0
+  - prodigal=2.6.3=h779adbc_3
+  - python=3.8.10=h12debd9_8
+  - readline=8.1=h27cfd23_0
+  - sambamba=0.6.6=2
+  - setuptools=52.0.0=py38h06a4308_0
+  - spades=3.13.0=0
+  - sqlite=3.35.4=hdfb4753_0
+  - tk=8.6.10=hbc83047_0
+  - trimmomatic=0.39=hdfd78af_2
+  - wget=1.20.1=h20c2e04_0
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - xz=5.2.5=h7b6447c_0
+  - zlib=1.2.11=h7b6447c_3
   - pip:
-    - git+https://github.com/cjneely10/YAPIM.git
-    - https://github.com/RasmussenLab/vamb/archive/3.0.2.zip
+    - art==5.1
+    - astroid==2.5
+    - attrs==21.2.0
+    - bcbio-gff==0.6.6
+    - biopython==1.76
+    - coverage==5.5
+    - decorator==5.0.9
+    - iniconfig==1.1.1
+    - isort==5.9.1
+    - lazy-object-proxy==1.6.0
+    - mccabe==0.6.1
+    - networkx==2.2
+    - numpy==1.21.0
+    - packaging==20.9
+    - pluggy==0.13.1
+    - plumbum==1.6.6
+    - py==1.10.0
+    - pylint==2.6.0
+    - pyparsing==2.4.7
+    - pytest==6.2.1
+    - pytest-cov==2.10.1
+    - pyyaml==5.3.1
+    - six==1.16.0
+    - toml==0.10.2
+    - wrapt==1.12.1
+    - yapim==0.1.0
