--- a/tests/demo/environment.yml
+++ b/tests/demo/environment.yml
@@ -36,11 +36,16 @@ dependencies:
     - attrs==21.2.0
     - bcbio-gff==0.6.6
     - biopython==1.76
+    - checkm-genome==1.1.3
     - coverage==5.5
+    - cycler==0.10.0
     - decorator==5.0.9
+    - dendropy==4.5.2
     - iniconfig==1.1.1
     - isort==5.9.1
+    - kiwisolver==1.3.1
     - lazy-object-proxy==1.6.0
+    - matplotlib==3.4.2
     - mccabe==0.6.1
     - networkx==2.2
     - numpy==1.21.0
@@ -54,7 +59,9 @@ dependencies:
     - pysam==0.16.0.1
     - pytest==6.2.1
     - pytest-cov==2.10.1
+    - python-dateutil==2.8.1
     - pyyaml==5.3.1
+    - scipy==1.7.0
     - six==1.16.0
     - toml==0.10.2
     - torch==1.9.0
