Re-order config file for more intuitive user changes

--- a/tests/config_manager/original-config.yaml
+++ b/tests/config_manager/original-config.yaml
@@ -1,10 +1,6 @@
 ---  # document start
 
 ###########################################
-## Pipeline input section
-INPUT:
-  root: all
-
 ## Global settings
 GLOBAL:
   # Maximum threads/cpus to use in analysis
@@ -13,7 +9,7 @@ GLOBAL:
   MaxMemory: 100
 
 ###########################################
-
+## SLURM run settings
 SLURM:
   ## Set to True if using SLURM
   USE_CLUSTER: false
@@ -23,6 +19,13 @@ SLURM:
   --qos: unlim
   --job-name: EukMS
   user-id: uid
+
+###########################################
+## Pipeline input section
+INPUT:
+  root: all
+
+###########################################
 
 Write:
   # Number of threads task will use
