--- a/tests/demo/first_pipeline_tasks-config.yaml
+++ b/tests/demo/first_pipeline_tasks-config.yaml
@@ -1,10 +1,6 @@
 ---  # document start
 
 ###########################################
-## Pipeline input section
-INPUT:
-  root: all
-
 ## Global settings
 GLOBAL:
   # Maximum threads/cpus to use in analysis
@@ -13,7 +9,7 @@ GLOBAL:
   MaxMemory: 100
 
 ###########################################
-
+## SLURM run settings
 SLURM:
   ## Set to True if using SLURM
   USE_CLUSTER: false
@@ -23,6 +19,13 @@ SLURM:
   --qos: unlim
   --job-name: EukMS
   user-id: uid
+
+###########################################
+## Pipeline input section
+INPUT:
+  root: all
+
+###########################################
 
 TrimReads:
   # Number of threads task will use
@@ -76,6 +79,7 @@ QualityCheck:
   memory: 60
   time: "4:00:00"
   program: checkm
+  min_quality: 5.0
 
 IdentifyProteins:
   # Number of threads task will use
