--- a/tests/eukmetasanity/run/environment.yml
+++ b/tests/eukmetasanity/run/environment.yml
@@ -27,3 +27,4 @@ dependencies:
     - pylint==2.6.0
     - pytest==6.2.1
     - pytest-cov==2.10.1
+    - git+https://github.com/cjneely10/LocusSolver.git
