--- a/tests/eukmetasanity/refine/environment.yml
+++ b/tests/eukmetasanity/refine/environment.yml
@@ -1,4 +1,4 @@
-name: EukMS_refinetest
+name: EukMS_refine
 channels:
   - bioconda
   - conda-forge
@@ -30,3 +30,4 @@ dependencies:
     - pylint==2.6.0
     - pytest==6.2.1
     - pytest-cov==2.10.1
+    - git+https://github.com/cjneely10/YAPIM.git
