--- a/tests/eukmetasanity/run/environment.yml
+++ b/tests/eukmetasanity/run/environment.yml
@@ -1,4 +1,4 @@
-name: EukMS_runtest
+name: EukMS_run
 channels:
   - bioconda
   - conda-forge
@@ -28,3 +28,4 @@ dependencies:
     - pytest==6.2.1
     - pytest-cov==2.10.1
     - git+https://github.com/cjneely10/LocusSolver.git
+    - git+https://github.com/cjneely10/YAPIM.git
