--- a/tests/eukmetasanity/run/run-config.yaml
+++ b/tests/eukmetasanity/run/run-config.yaml
@@ -112,6 +112,7 @@ AbinitioGeneMark:
   memory: 16
   time: "16:00:00"
   skip: false
+  run_mode: genome  # Set to either genome or MAG
   dependencies:
     MMSeqsFilterTaxSeqDB:
       threads: 1
