--- a/tests/eukmetasanity/run/run-config.yaml
+++ b/tests/eukmetasanity/run/run-config.yaml
@@ -179,4 +179,13 @@ AbinitioAugustus:
       rounds: 1
       run_mode: genome  # Set to either genome or MAG
 
+Tier:
+  # Number of threads task will use
+  threads: 1
+  # Amount of memory task will use (in GB)
+  memory: 8
+  time: "10:00"
+  program: locus_solver
+  tier: 1  # or 2 or 3
+
 ...  # document end
