--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - conda create --name yapim python=3.8
+  - conda create -y --name yapim python=3.8
   - conda activate yapim
   - pip install -y git+https://github.com/cjneely10/YAPIM.git
 script:
