--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
   - conda create -y --name yapim python=3.8
   - conda activate yapim
-  - conda install -c bioconda mmseqs2
+  - conda install -y -c bioconda mmseqs2
   - pip install git+https://github.com/cjneely10/YAPIM.git
 script:
   - cd tests/config_manager && pytest && cd -
