--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-total-fail }}"
           exit 1
 
-      - name: Commit pytest coverage table
-        uses: peter-evans/commit-comment@v1
+      - name: pytest-coverage-commentator
+        uses: coroo/pytest-coverage-commentator@v1.0.2
         with:
-          body: ${{ steps.pytester-cov.outputs.output-table }}
+          pytest-coverage: ${{ steps.pytester-cov.outputs.output-table }}
