--- a/.pylintrc
+++ b/.pylintrc
@@ -140,7 +140,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         unnecessary-pass,
-        duplicate-code
+        duplicate-code,
+        cyclic-import
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
