Adjust tests for new SLURM settings

--- a/tests/config_manager/original-config.yaml
+++ b/tests/config_manager/original-config.yaml
@@ -11,7 +11,7 @@ GLOBAL:
 ###########################################
 ## SLURM run settings
 SLURM:
-  ## Set to True if using SLURM
+  ## Set to true if using SLURM
   USE_CLUSTER: false
   ## Pass any flags you wish below
   ## DO NOT PASS the following:
